--- a/src/Admin/Resources/public/css/ka/Button.css
+++ b/src/Admin/Resources/public/css/ka/Button.css
@@ -86,10 +86,6 @@
     background-color: #e8e8e8;
 }
 
-.ka-Button span {
-    display: none;
-}
-
 div.button-list {
     text-align: right;
     padding-right: 5px;
