--- a/src/Admin/Resources/public/css/ka/List.css
+++ b/src/Admin/Resources/public/css/ka/List.css
@@ -24,11 +24,11 @@
     color: #333;
     position: relative;
 
-    -moz-transition-duration: .4s;
-    -webkit-transition-duration: .4s;
-    -o-transition-duration: .4s;
-    -ms-transition-duration: .4s;
-    transition-duration: .4s;
+    -moz-transition-duration: .3s;
+    -webkit-transition-duration: .3s;
+    -o-transition-duration: .3s;
+    -ms-transition-duration: .3s;
+    transition-duration: .3s;
 }
 
 .ka-List-item h2 {
@@ -71,4 +71,24 @@
     color: silver;
     text-align: center;
     cursor: default;
+}
+
+.ka-List-showRemove .ka-List-item-remove {
+    display: block;
+}
+
+.ka-List-item-remove {
+    position: absolute;
+    background-color: white;
+    right: 0;
+    top: 0;
+    display: none;
+    cursor: default;
+    bottom: 0;
+    -moz-transition-duration: .3s;
+    -webkit-transition-duration: .3s;
+    -o-transition-duration: .3s;
+    -ms-transition-duration: .3s;
+    transition-duration: .3s;
+    padding: 5px;
 }
